# codex-migrate

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  README.zh-CN.md  SECURITY.md  TRADEMARKS.md  build.rs
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml  windows-build.yml
assets/icons/: CodexMigrate.icns
docs/: GITHUB_PUBLISHING.md
scripts/: package-macos.sh
src/: app_server.rs  cli.rs  desktop_state.rs  discovery.rs  html_export.rs  lib.rs  main.rs  merge.rs  model.rs  operations.rs  path_mapper.rs  rollout.rs  scanner.rs  session_index.rs  settings.rs  sqlite_adapter.rs  transaction.rs  validator.rs
tests/: cli_smoke.rs
