[package]
name = "codex-migrate"
version = "1.0.7"
edition = "2021"
description = "Cross-platform migration and repair tool for local Codex sessions"
license = "MIT"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
dirs = "5.0"
eframe = { version = "0.31", optional = true, default-features = false, features = ["default_fonts", "glow", "wayland", "x11"] }
hex = "0.4"
image = { version = "0.25", optional = true, default-features = false, features = ["png"] }
rfd = { version = "0.15", optional = true, default-features = false, features = ["async-std", "xdg-portal"] }
rusqlite = { version = "0.32", features = ["bundled", "backup"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.11"
tempfile = "3.13"
uuid = { version = "1.11", features = ["v4"] }
walkdir = "2.5"

[features]
default = []
gui = ["dep:eframe", "dep:rfd", "dep:image"]

[[bin]]
name = "codex-migrate"
path = "src/main.rs"

[[bin]]
name = "codex-migrate-gui"
path = "src/bin/codex-migrate-gui.rs"
required-features = ["gui"]

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"

[profile.release]
lto = "thin"
strip = true
